Revert "Spacing fix on author profile"
This reverts commit 3a5fda70092fb37b8dd06c5a6e2826494ea8ba9b.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1486,7 +1486,6 @@ Ghost editor. */
 }
 
 .author-profile p {
-    margin: 0 0 1.5em;
     color: color-mod(var(--color-midgrey) l(-8%));
 }
 
